Fix bug in message when removing blank tile. Rename methods for improved readability. Improved mouse cursor choice

--- a/ScrabbleWeb/Client/wwwroot/css/app.css
+++ b/ScrabbleWeb/Client/wwwroot/css/app.css
@@ -315,3 +315,7 @@ app {
     width: 100%;
     margin-bottom: 1rem;
 }
+
+.clickable {
+    cursor: pointer;
+}
